fix(kernel): ScriptBindings 容忍 null metric value